--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
         <header>
             <nav class="navbar">
                 <div class="nav-logo">
-                    <img src="/img/Site-Logo-V4-removebg-preview.png" alt="Site-Logo.png" width="100px">
+                    <img src="img/Site-Logo-V4-removebg-preview.png" alt="Site-Logo.png" width="100px">
                 </div>
                 <div class="nav-links">
                     <ul class="menu">
@@ -103,22 +103,22 @@
                         <div><img src="img/60.png" alt="60%">
                             <p>Returning partners</p>
                         </div>
-                        <div><img src="/img/35.png" alt="35+">
+                        <div><img src="img/35.png" alt="35+">
                             <p>Clients supported</p>
                         </div>
                     </div>
                 </div>
                 <div class="our-impact-bottom">
-                    <div><img src="/img/8.png" alt="8">
+                    <div><img src="img/8.png" alt="8">
                         <p>Years</p>
                     </div>
-                    <div><img src="/img/256.png" alt="256">
+                    <div><img src="img/256.png" alt="256">
                         <p>Finished projects</p>
                     </div>
-                    <div><img src="/img/79.png" alt="79">
+                    <div><img src="img/79.png" alt="79">
                         <p>Finished builds</p>
                     </div>
-                    <div><img src="/img/34.png" alt="34">
+                    <div><img src="img/34.png" alt="34">
                         <p>Honors earned</p>
                     </div>
                 </div>
@@ -156,16 +156,16 @@
                     </div>
                     <div class="our-mission-bottom-rhs">
                         <span>
-                            <img src="/img/27.png" alt="27">
+                            <img src="img/27.png" alt="27">
                             <p>Construction Award</p>
                         </span>
                         <span>
-                            <img src="/img/176.png" alt="176">
+                            <img src="img/176.png" alt="176">
                             <p>Completed Projects</p>
                         </span>
                     </div>
                 </div>
-                <img src="/img/ending-line-gray.png" alt="ending-line.png" width="90%" class="mission-ending-line">
+                <img src="img/ending-line-gray.png" alt="ending-line.png" width="90%" class="mission-ending-line">
             </section>
         </div>
         <!-- ===== Our-Mission Section End ===== -->
@@ -192,7 +192,7 @@
             <hr class="footer-upper-hr">
             <div class="footer-bottom">
                 <div class="footer-bottom-left">
-                    <img src="/img/footer-logo.png" alt="footer-logo" width="200px">
+                    <img src="img/footer-logo.png" alt="footer-logo" width="200px">
                     <p>Our mission is to bring customers the most perfect works, Curator scelerisque ipsum ques
                         tellus
                         tristique.</p>
