--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <nav class="navbar">
                 <div class="nav-logo">
                     <a href="/index.html">
-                        <img src="/img/Site-Logo-V4-removebg-preview.png" alt="Site-Logo.png" width="100px">
+                        <img src="img/Site-Logo-V4-removebg-preview.png" alt="Site-Logo.png" width="100px">
                     </a>
                 </div>
                 <div class="nav-links">
@@ -77,12 +77,12 @@
                         sustainable spaces.</p>
                     <div class="about-section-content">
                         <div class="about-section-content-lhs">
-                            <img src="/img/About-Sec-Img.png" alt="About-Sec-Img.png" width="450px">
+                            <img src="img/About-Sec-Img.png" alt="About-Sec-Img.png" width="450px">
                         </div>
                         <div class="about-section-content-rhs">
                             <div class="about-section-content-rhs-row-1">
                                 <div class="icon-wrapper">
-                                <img src="/img/worker-belt.png" alt="worker-belt.png">
+                                <img src="img/worker-belt.png" alt="worker-belt.png">
                                 </div>
                                 <div class="about-section-content-rhs-row-1-content">
                                     <h2>15+ Years of Expertise</h2>
@@ -92,7 +92,7 @@
                             </div>
                             <div class="about-section-content-rhs-row-2">
                                  <div class="icon-wrapper">
-                                <img src="/img/engineer-helmet.png" alt="worker-belt.png">
+                                <img src="img/engineer-helmet.png" alt="worker-belt.png">
                                 </div>
                                 <div class="about-section-content-rhs-row-2-content">
                                     <h2>Innovative Solutions</h2>
@@ -102,7 +102,7 @@
                             </div>
                             <div class="about-section-content-rhs-row-3">
                                  <div class="icon-wrapper">
-                                <img src="/img/idea-logo.png" alt="worker-belt.png">
+                                <img src="img/idea-logo.png" alt="worker-belt.png">
                                 </div>
                                 <div class="about-section-content-rhs-row-3-content">
                                     <h2>Trusted Professionals</h2>
@@ -127,7 +127,7 @@
                     <div class="services-card">
                         <div class="services-card-inner">
                             <div class="services-card-front">
-                                <img src="/img/services-card-1.png" width="50px">
+                                <img src="img/services-card-1.png" width="50px">
                                 <h3>Residential Services</h3>
                             </div>
                             <div class="services-card-back">
@@ -140,7 +140,7 @@
                     <div class="services-card">
                         <div class="services-card-inner">
                             <div class="services-card-front">
-                                <img src="/img/services-card-2.png" width="50px">
+                                <img src="img/services-card-2.png" width="50px">
                                 <h3>Commercial Upgrade</h3>
                             </div>
                             <div class="services-card-back">
@@ -153,7 +153,7 @@
                     <div class="services-card">
                         <div class="services-card-inner">
                             <div class="services-card-front">
-                                <img src="/img/services-card-3.png" width="50px">
+                                <img src="img/services-card-3.png" width="50px">
                                 <h3>Structural Expertise</h3>
                             </div>
                             <div class="services-card-back">
@@ -166,7 +166,7 @@
                     <div class="services-card">
                         <div class="services-card-inner">
                             <div class="services-card-front">
-                                <img src="/img/services-card-4.png" width="50px">
+                                <img src="img/services-card-4.png" width="50px">
                                 <h3>Renovation Services</h3>
                             </div>
                             <div class="services-card-back">
@@ -179,7 +179,7 @@
                 <a href="#" class="btn-custom services-btn">View All Services<span class="btn-icon"><i
                             class="fas fa-arrow-right"></i></span></a>
                 <div class="services-why-us-img-wrapper">
-                    <img src="/img/why-choose-us-img.png" alt="" class="services-why-us-img" height="300px">
+                    <img src="img/why-choose-us-img.png" alt="" class="services-why-us-img" height="300px">
                 </div>
             </section>
         </div>
@@ -189,7 +189,7 @@
         <div class="section-container">
             <section class="why-us">
                 <span>
-                    <img src="/img/square-box.png" alt="square-box.png">
+                    <img src="img/square-box.png" alt="square-box.png">
                     <p>We work with integrity</p>
                 </span>
                 <h2>Why Choose Us?</h2>
@@ -197,31 +197,31 @@
                     of experience, ingenuity and adaptability to deliver excellence to our clients.</p>
                 <div class="why-us-cards-wrapper">
                     <div class="why-us-card-1">
-                        <img src="/img/security-shield.png" alt="/img/security-shield.png" width="80px">
+                        <img src="img/security-shield.png" alt="/img/security-shield.png" width="80px">
                         <h2>Health & Safety</h2>
                         <p>Simple actions make a big difference. With every project, our team follows strict safety
                             measures to protect workers.</p>
                     </div>
                     <div class="why-us-card-2">
-                        <img src="/img/engineer-helmet.png" alt="/img/engineer-helmet.png" width="80px">
+                        <img src="img/engineer-helmet.png" alt="/img/engineer-helmet.png" width="80px">
                         <h2>Expert Support</h2>
                         <p>With years of hands-on experience, we combine knowledge and modern technology to deliver
                             reliable solutions.</p>
                     </div>
                     <div class="why-us-card-3">
-                        <img src="/img/worker-belt.png" alt="/img/worker-belt.png" width="80px">
+                        <img src="img/worker-belt.png" alt="/img/worker-belt.png" width="80px">
                         <h2>Quality Build</h2>
                         <p>Every detail matters. From planning to execution, we maintain strict quality checks to ensure
                             each project is built to last.</p>
                     </div>
                     <div class="why-us-card-4">
-                        <img src="/img/idea-logo.png" alt="/img/security-shield.png" width="80px">
+                        <img src="img/idea-logo.png" alt="/img/security-shield.png" width="80px">
                         <h2>Client Focused</h2>
                         <p>We believe in partnerships built on trust. Our priority is to listen, adapt, and deliver
                             tailored solutions that reflect our clients.</p>
                     </div>
                 </div>
-                <img src="/img/ending-line-white.png" alt="ending-line.png">
+                <img src="img/ending-line-white.png" alt="ending-line.png">
                 <div class="why-us-bottom">
                     <h3>Our construction company is the perfect choice for your dream home.
                         Contact
@@ -293,16 +293,16 @@
                     </div>
                     <div class="our-mission-bottom-rhs">
                         <span>
-                            <img src="/img/27.png" alt="27">
+                            <img src="img/27.png" alt="27">
                             <p>Construction Award</p>
                         </span>
                         <span>
-                            <img src="/img/176.png" alt="176">
+                            <img src="img/176.png" alt="176">
                             <p>Completed Projects</p>
                         </span>
                     </div>
                 </div>
-                <img src="/img/ending-line-gray.png" alt="ending-line.png" width="90%" class="mission-ending-line">
+                <img src="img/ending-line-gray.png" alt="ending-line.png" width="90%" class="mission-ending-line">
             </section>
         </div>
         <!-- ===== Our-Mission Section End ===== -->
@@ -316,7 +316,7 @@
 
                     <div id="testimonialCarousel" class="carousel slide" data-bs-ride="carousel"
                         data-bs-interval="4000">
-                        <img src="/img/right_x-quote.png" alt="right_x-quote.png" class="right-quote">
+                        <img src="img/right_x-quote.png" alt="right_x-quote.png" class="right-quote">
                         <div class="carousel-inner">
 
                             <!-- Testimonial 1 -->
@@ -328,7 +328,7 @@
                                         and the final results exceeded our expectations."
                                     </p>
                                     <div class="d-flex align-items-center mt-3">
-                                        <img src="/img/testimonial-1.png" class="rounded-circle me-3 img-fluid"
+                                        <img src="img/testimonial-1.png" class="rounded-circle me-3 img-fluid"
                                             alt="Sarah Johnson" style="width:80px; height:80px; object-fit:cover;">
                                         <div class="text-start">
                                             <h6 class="mb-0 fw-bold">Sarah Johnson</h6>
@@ -347,7 +347,7 @@
                                         and the quality of service was outstanding."
                                     </p>
                                     <div class="d-flex align-items-center mt-3">
-                                        <img src="/img/testimonial-2.webp" class="rounded-circle me-3 img-fluid"
+                                        <img src="img/testimonial-2.webp" class="rounded-circle me-3 img-fluid"
                                             alt="Mark Wilson" style="width:80px; height:80px; object-fit:cover;">
                                         <div class="text-start">
                                             <h6 class="mb-0 fw-bold">Mark Wilson</h6>
@@ -366,7 +366,7 @@
                                         innovation, and reliability every time."
                                     </p>
                                     <div class="d-flex align-items-center mt-3">
-                                        <img src="/img/testimonial-3.webp" class="rounded-circle me-3 img-fluid"
+                                        <img src="img/testimonial-3.webp" class="rounded-circle me-3 img-fluid"
                                             alt="Emily Carter" style="width:80px; height:80px; object-fit:cover;">
                                         <div class="text-start">
                                             <h6 class="mb-0 fw-bold">Emily Carter</h6>
@@ -385,7 +385,7 @@
                                         and the outcome was better than we imagined."
                                     </p>
                                     <div class="d-flex align-items-center mt-3">
-                                        <img src="/img/testimonial-4.jpeg" class="rounded-circle me-3 img-fluid"
+                                        <img src="img/testimonial-4.jpeg" class="rounded-circle me-3 img-fluid"
                                             alt="David Lee" style="width:80px; height:80px; object-fit:cover;">
                                         <div class="text-start">
                                             <h6 class="mb-0 fw-bold">David Lee</h6>
@@ -404,7 +404,7 @@
                                         and we’re thrilled with the final design."
                                     </p>
                                     <div class="d-flex align-items-center mt-3">
-                                        <img src="/img/testimonial-1.png" class="rounded-circle me-3 img-fluid"
+                                        <img src="img/testimonial-1.png" class="rounded-circle me-3 img-fluid"
                                             alt="Olivia Brown" style="width:80px; height:80px; object-fit:cover;">
                                         <div class="text-start">
                                             <h6 class="mb-0 fw-bold">Olivia Brown</h6>
@@ -457,7 +457,7 @@
             <hr class="footer-upper-hr">
             <div class="footer-bottom">
                 <div class="footer-bottom-left">
-                    <img src="/img/footer-logo.png" alt="footer-logo" width="200px">
+                    <img src="img/footer-logo.png" alt="footer-logo" width="200px">
                     <p>Our mission is to bring customers the most perfect works, Curator scelerisque ipsum ques tellus
                         tristique.</p>
                     <div class="footer-bottom-left-social-icons">
