--- a/contact-us.html
+++ b/contact-us.html
@@ -34,7 +34,7 @@
         <header>
             <nav class="navbar">
                 <div class="nav-logo">
-                    <img src="/img/Site-Logo-V4-removebg-preview.png" alt="Site-Logo.png" width="100px">
+                    <img src="img/Site-Logo-V4-removebg-preview.png" alt="Site-Logo.png" width="100px">
                 </div>
                 <div class="nav-links">
                     <ul class="menu">
@@ -70,7 +70,7 @@
                             <li><span class="icon"><i class="fa-solid fa-phone"></i></span>+1 840 841 25 69</li>
                             <li><span class="icon"><i class="fa-solid fa-envelope"></i></span>info@email.com</li>
                         </ul>
-                        <img src="/img/contact-us-img.png" alt="" width="550px">
+                        <img src="img/contact-us-img.png" alt="" width="550px">
                     </div>
 
                     <!-- Right side (form) -->
@@ -136,7 +136,7 @@
             <hr class="footer-upper-hr">
             <div class="footer-bottom">
                 <div class="footer-bottom-left">
-                    <img src="/img/footer-logo.png" alt="footer-logo" width="200px">
+                    <img src="img/footer-logo.png" alt="footer-logo" width="200px">
                     <p>Our mission is to bring customers the most perfect works, Curator scelerisque ipsum ques
                         tellus
                         tristique.</p>
