--- a/services.html
+++ b/services.html
@@ -36,7 +36,7 @@
         <header>
             <nav class="navbar">
                 <div class="nav-logo">
-                    <img src="/img/Site-Logo-V4-removebg-preview.png" alt="Site-Logo.png" width="100px">
+                    <img src="img/Site-Logo-V4-removebg-preview.png" alt="Site-Logo.png" width="100px">
                 </div>
                 <div class="nav-links">
                     <ul class="menu">
@@ -363,7 +363,7 @@
             <hr class="footer-upper-hr">
             <div class="footer-bottom">
                 <div class="footer-bottom-left">
-                    <img src="/img/footer-logo.png" alt="footer-logo" width="200px">
+                    <img src="img/footer-logo.png" alt="footer-logo" width="200px">
                     <p>Our mission is to bring customers the most perfect works, Curator scelerisque ipsum ques tellus
                         tristique.</p>
                     <div class="footer-bottom-left-social-icons">
