--- a/about.html
+++ b/about.html
@@ -38,10 +38,10 @@
                 </div>
                 <div class="nav-links">
                     <ul class="menu">
-                        <li><a href="/index.html">Home</a></li>
-                        <li><a href="/about.html">About</a></li>
-                        <li><a href="/services.html">Services</a></li>
-                        <li><a href="/contact-us.html">Contact</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="services.html">Services</a></li>
+                        <li><a href="contact-us.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="nav-cta">
@@ -56,7 +56,7 @@
         <div class="section-container">
             <section class="hero-section">
                 <h1>About Us</h1>
-                <h3> <a href="/index.html">Home</a> <i class="fa-solid fa-arrow-right"></i> <a href="/about.html">About Us</a> </h3>
+                <h3> <a href="index.html">Home</a> <i class="fa-solid fa-arrow-right"></i> <a href="about.html">About Us</a> </h3>
             </section>
         </div>
         <!-- ===== Hero Section End ===== -->
