--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
         <header>
             <nav class="navbar">
                 <div class="nav-logo">
-                    <a href="/index.html">
+                    <a href="index.html">
                         <img src="img/Site-Logo-V4-removebg-preview.png" alt="Site-Logo.png" width="100px">
                     </a>
                 </div>
                 <div class="nav-links">
                     <ul class="menu">
-                        <li><a href="/index.html">Home</a></li>
-                        <li><a href="/about.html">About</a></li>
-                        <li><a href="/services.html">Services</a></li>
-                        <li><a href="/contact-us.html">Contact</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="services.html">Services</a></li>
+                        <li><a href="contact-us.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="nav-cta">
