--- a/services.html
+++ b/services.html
@@ -40,10 +40,10 @@
                 </div>
                 <div class="nav-links">
                     <ul class="menu">
-                        <li><a href="/index.html">Home</a></li>
-                        <li><a href="/about.html">About</a></li>
-                        <li><a href="/services.html">Services</a></li>
-                        <li><a href="/contact-us.html">Contact</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="services.html">Services</a></li>
+                        <li><a href="contact-us.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="nav-cta">
@@ -58,8 +58,8 @@
         <div class="section-container">
             <section class="hero-section">
                 <h1>Services</h1>
-                <h3> <a href="/index.html">Home</a> <i class="fa-solid fa-arrow-right"></i> <a
-                        href="/services.html">Services</a> </h3>
+                <h3> <a href="index.html">Home</a> <i class="fa-solid fa-arrow-right"></i> <a
+                        href="services.html">Services</a> </h3>
             </section>
         </div>
         <!-- ===== Hero Section End ===== -->
